# tuiml

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
benchmarks/: benchmark_algorithms.py  benchmark_results.csv  benchmark_results.json
tests/: __init__.py  conftest.py
tests/test_algorithms/test_anomaly/: __init__.py  test_abod.py  test_elliptic_envelope.py  test_isolation_forest.py  test_local_outlier_factor.py  test_one_class_svm.py
tests/test_algorithms/test_associations/: __init__.py  test_apriori.py  test_eclat.py  test_fpgrowth.py
tests/test_algorithms/test_bayesian/: __init__.py  test_bayes_net.py  test_gaussian_processes.py  test_naive_bayes.py  test_naive_bayes_multinomial.py
tests/test_algorithms/test_clustering/: __init__.py  test_canopy.py  test_cobweb.py  test_dbscan.py  test_em.py  test_farthest_first.py  test_filtered_clusterer.py  test_hierarchical.py  test_simple_kmeans.py
tests/test_algorithms/test_ensemble/: __init__.py  test_adaboost_m1.py  test_additive_regression.py  test_bagging.py  test_filtered_classifier.py  test_logit_boost.py  test_multi_class_classifier.py  test_random_committee.py  test_random_subspace.py  test_regression_by_discretization.py  test_stacking.py  test_vote.py
tests/test_algorithms/test_gradient_boosting/: __init__.py  test_catboost.py  test_lightgbm.py  test_xgboost.py
tests/test_algorithms/test_linear/: __init__.py  test_linear_regression.py  test_logistic.py  test_sgd.py  test_simple_linear_regression.py  test_simple_logistic.py
tests/test_algorithms/test_neighbors/: __init__.py  test_ibk.py  test_kstar.py  test_lwl.py
tests/test_algorithms/test_neural/: __init__.py  test_multilayer_perceptron.py  test_perceptron.py
tests/test_algorithms/test_rules/: __init__.py  test_decision_table.py  test_jrip.py  test_m5rules.py  test_oner.py  test_part.py  test_zeror.py
tests/test_algorithms/test_svm/: __init__.py  test_smo.py  test_smoreg.py
tests/test_algorithms/test_timeseries/: __init__.py  test_ar.py  test_arima.py  test_arma.py  test_exponential_smoothing.py  test_ma.py  test_prophet.py  test_stl_decomposition.py
tests/test_algorithms/test_trees/: __init__.py  test_decision_stump.py  test_hoeffding_tree.py  test_j48.py  test_lmt.py  test_m5p.py  test_random_forest.py  test_random_tree.py  test_rep_tree.py
tests/test_base/: test_classifier.py
tests/test_cpp/: test_criteria.py  test_predict.py  test_splitters.py
tests/test_datasets/: __init__.py  test_arff_parser.py  test_builtin.py
tests/test_datasets/test_generators/: __init__.py  test_classification_generators.py  test_clustering_generators.py  test_regression_generators.py
tests/test_datasets/test_loaders/: __init__.py  test_arff_loader.py  test_auto_loader.py  test_csv_loader.py  test_numpy_loader.py
tests/test_features/: __init__.py
tests/test_integration/: test_workflow.py
tests/test_preprocessing/: __init__.py
tests/test_serving/: __init__.py  test_model_manager.py  test_schemas.py  test_server.py
tests/test_workflow/: __init__.py  test_workflow.py
tuiml/: __init__.py  api.py  workflow.py
tuiml/_cpp/: __init__.py  module.cpp
tuiml/agent/: SKILL.md  __init__.py  _core.py  anthropic.py  crewai.py  langchain.py  openai.py  pydantic_ai.py  tools.py
tuiml/algorithms/: __init__.py
tuiml/base/: __init__.py  algorithms.py  estimators.py  experiments.py  features.py  generators.py  kernels.py  metrics.py  neighbors.py  preprocessing.py  splitting.py  tuning.py
tuiml/cli/: __init__.py
tuiml/datasets/: __init__.py
tuiml/evaluation/: __init__.py
tuiml/features/: __init__.py
tuiml/hub/: __init__.py  datasets_remote.py  registry.py  remote.py  types.py
tuiml/llm/: Skill.md  __init__.py  __main__.py  registry.py  server.py  tools.py  user_algorithms.py
tuiml/preprocessing/: __init__.py
tuiml/serving/: __init__.py  model_manager.py  schemas.py  server.py
tuiml/utils/: __init__.py  serialization.py
tutorials/case_studies/: 01_diabetes_prediction.ipynb  02_credit_scoring.ipynb
tutorials/community/: 01_hub_discover.ipynb  02_hub_publish.ipynb  03_hub_benchmark.ipynb
tutorials/deploy/: 01_cli.ipynb  02_model_serving.ipynb
tutorials/llm_friendly/: 01_llm_tools.ipynb  02_mcp_server.ipynb  03_agentic_workflows.ipynb
tutorials/ml_simplified/: 01_high_level_api.ipynb  02_workflow_builder.ipynb  03_classification.ipynb  04_regression.ipynb  05_clustering.ipynb  06_anomaly_detection.ipynb  07_timeseries.ipynb  08_preprocessing.ipynb  09_feature_engineering.ipynb  10_experiments.ipynb
tutorials/quickstart/: 01_hello_tuiml.ipynb
(+321 files in other folders)
