[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12", "numpy>=1.21.0"]
build-backend = "scikit_build_core.build"

[project]
name = "tuiml"
version = "0.1.2"
description = "An open-source agentic ML ecosystem with a clean Python API, MCP server for AI agents, and a community Hub for sharing algorithms, datasets, and models"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    {name = "Nilesh Verma"},
    {name = "Albert Bifet"},
    {name = "Bernhard Pfahringer"},
]
maintainers = [
    {name = "Nilesh Verma", email = "nilesh.verma@waikato.ac.nz"},
]
keywords = [
    "machine learning", "data mining", "ml", "llm-friendly",
    "classification", "regression", "clustering",
    "anomaly-detection", "time-series", "mcp",
    "agentic-ml", "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "joblib>=1.0.0",
    "click>=8.0.0",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
    "mcp>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "bigtree>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "build",
    "twine",
]

# Framework adapters — `import tuiml.agent.<framework>` uses these lazily.
openai        = ["openai>=1.0.0"]
anthropic     = ["anthropic>=0.30.0"]
langchain     = ["langchain-core>=0.3.0"]
"pydantic-ai" = ["pydantic-ai>=0.1.0"]
crewai        = ["crewai>=0.100.0"]

# One-shot: install every framework adapter at once.
frameworks = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "langchain-core>=0.3.0",
    "pydantic-ai>=0.1.0",
    "crewai>=0.100.0",
]

[project.urls]
Homepage = "https://tuiml.ai"
Repository = "https://github.com/tuiml/tuiml"
Documentation = "https://tuiml.ai/docs/getting_started.html"
"Bug Tracker" = "https://github.com/tuiml/tuiml/issues"
Changelog = "https://tuiml.ai/docs/changelog.html"

[project.scripts]
tuiml = "tuiml.cli:main"
tuiml-mcp = "tuiml.agent.mcp.server:main"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = ["tuiml"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
USE_OPENMP = "ON"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=tuiml --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
]
